--- a/WEB/src/main/resources/application.properties
+++ b/WEB/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=demo
+spring.config.import=optional:file:.env[.properties]
+
+server.port=9000
+
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
+#jpa setting
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.elasticsearch.uris=http://${ES_HOST:localhost}:${ES_PORT:9200}
+
