--- a/WEB/docker-compose.yml
+++ b/WEB/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       SPRING_DATASOURCE_PASSWORD: "${DB_PASSWORD}"
 
       SPRING_ELASTICSEARCH_URIS: "http://${ES_HOST}:${ES_PORT}"
-      SPRING_ELASTICSEARCH_USERNAME: "${ES_USER}"
-      SPRING_ELASTICSEARCH_PASSWORD: "${ES_PASSWORD}"
+      # SPRING_ELASTICSEARCH_USERNAME: "${ES_USER}"
+      # SPRING_ELASTICSEARCH_PASSWORD: "${ES_PASSWORD}"
 
       # 선택: Hibernate 전략/로그 레벨 등 필요 시
       # SPRING_JPA_HIBERNATE_DDL_AUTO: "update"
