--- a/WEB/pom.xml
+++ b/WEB/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>war</packaging>
+<!--	<packaging>war</packaging>-->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -100,7 +100,7 @@
 			</resource>
 			<resource>
 				<directory>src/main/webapp</directory>
-				<!-- <targetPath>META-INF/resources</targetPath> -->
+				 <targetPath>META-INF/resources</targetPath>
 				<includes>
 					<include>**/*.jsp</include>
 					<include>WEB-INF/**</include>
@@ -113,7 +113,6 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<packaging>war</packaging>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
