--- a/WEB/pom.xml
+++ b/WEB/pom.xml
@@ -2,7 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-<!--	<packaging>war</packaging>-->
+	<packaging>${packaging.type}</packaging>
+    <profiles>
+        <profile>
+            <id>docker-war</id>
+            <properties>
+                <packaging.type>war</packaging.type>
+            </properties>
+        </profile>
+    </profiles>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -31,6 +40,7 @@
 		<java.version>21</java.version>
 		<lombok.version>1.18.38</lombok.version>
 		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
+        <packaging.type>jar</packaging.type>
 	</properties>
 	<dependencies>
 		<dependency>
