보고서 에이전트 일단 만듬 ㅋ

--- a/AI/pyproject.toml
+++ b/AI/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "pyyaml",
     "sqlalchemy",
     "aiomysql",
-    "cryptography"
+    "cryptography",
+    "pymysql",
+    "sqlalchemy"
 ]
 
 [tool.uv]
